# SpleenSegmentation

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  samples.dvc
.dvc/: config
.github/workflows/: deploy.yml
SpleenSeg/: __init__.py  model.py
SpleenSeg/data_loading/: __init__.py  verify_dataset.py
SpleenSeg/export/: export_onnx_unet25d.py  verify_onnx_unet25d.py
SpleenSeg/inference/: run_inference_25d.py
SpleenSeg/preprocessing/: __init__.py  inspect_preprocessed.py  preprocess_dataset.py  transforms.py
SpleenSeg/serving/templates/: index.html
SpleenSeg/training/: __init__.py  dataset_25d.py  train.py  train_unet_25d.py  verify_dataloader_25d.py
medical_ai_pipeline/preprocessing/: transforms.py
models/: unet25d.onnx.dvc
nginx/: spleenseg.conf
